--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -20,7 +20,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../../img/2_figures_for_site.png') center/cover no-repeat;
+    background: url('../../img/2_figures_for_site.jpg') center/cover no-repeat;
     opacity: 0.4;
     z-index: -1;
 }
@@ -28,7 +28,7 @@
 .image-block {
     width: 50%;
     height: 100%;
-    background: url('../../img/2_figures_for_site.png') center/cover no-repeat;
+    background: url('../../img/2_figures_for_site.jpg') center/cover no-repeat;
 }
 
 .content {
